# quadthingy-hardware

./: .gitignore  .gitmodules  LICENSE  MotorHolder.SLDPRT  MotorMount.SLDPRT  README.md
cad/: BaseStationTop.SLDPRT  Motor.SLDPRT  Motor.STEP  MotorMount.STEP  MotorMount_Alt.SLDPRT
code/: Makefile  adc2.cpp  adc2.h  bno055.c  bno055.cpp  bno055.h  controller.c  controller.cpp  controller.h  esc.c  esc.cpp  esc.h  halconf.h  main.c  main.cpp  mcuconf.h  nrf24l01.c  nrf24l01.cpp  nrf24l01.h  ws2812b.c
code/.dep/: adc.o.d  adc_lld.o.d  bno055.o.d  board.o.d  chcond.o.d  chcore.o.d  chcore_v7m.o.d  chdebug.o.d  chdynamic.o.d  chevents.o.d  chheap.o.d  chmboxes.o.d  chmemcore.o.d  chmempools.o.d  chmsg.o.d  chmtx.o.d  chprintf.o.d  chqueues.o.d  chregistry.o.d  chschd.o.d  chsem.o.d  chsys.o.d  chthreads.o.d  chtm.o.d  chvt.o.d  comm_usb.o.d  controller.o.d  crt1.o.d  esc.o.d  ext.o.d  ext_lld.o.d  ext_lld_isr.o.d  hal.o.d  hal_buffers.o.d  hal_lld.o.d  hal_mmcsd.o.d  hal_queues.o.d  i2c.o.d  i2c_lld.o.d  main.o.d  (+29 more)
code/board/: board.h
controller/: CMakeLists.txt  package.xml
controller/src/: motors.cpp
pcb/: outline.dxf  outline.ipt
pcb/BaseStation/: Barometer.SchDoc  BaseStation.OutJob  BaseStation.PcbDoc  BaseStation.PrjPcb  BaseStation.PrjPcbStructure  BaseStation.SchDoc  Bluetooth.Harness  Bluetooth.SchDoc  Components.SchLib  DW1000.SchDoc  Footprints.PcbLib  IR.SchDoc  LEDs.SchDoc  MCU.SchDoc  Magnetometer.SchDoc  Power.Harness  Power.SchDoc  WirelessPower.SchDoc
pcb/BaseStation/Project Outputs for BaseStation/: Design Rule Check - BaseStation.drc  Design Rule Check - BaseStation.html  Status Report.Txt
pcb/BaseStation/Project Outputs for BaseStation/Gerber/: BaseStation-macro.APR_LIB  BaseStation.EXTREP  BaseStation.GBL  BaseStation.GBO  BaseStation.GBP  BaseStation.GBS  BaseStation.GKO  BaseStation.GP1  BaseStation.GP2  BaseStation.GTL  BaseStation.GTO  BaseStation.GTP  BaseStation.GTS  BaseStation.REP  BaseStation.RUL  BaseStation.XLN  BaseStation.apr
pcb/BaseStation/Project Outputs for BaseStation/NC Drill/: BaseStation.DRR  BaseStation.LDP
pcb/BrushedESC/: BrushedESC.OutJob  BrushedESC.PcbDoc  BrushedESC.SchDoc  Components.PcbLib  Components.SchLib
pcb/BrushedESC/Project Outputs for BrushedESC/: Status Report.Txt
pcb/BrushedESC/Project Outputs for BrushedESC/Gerber/: BrushedESC.EXTREP  BrushedESC.GBS  BrushedESC.GTP  BrushedESC.GTS  BrushedESC.REP  BrushedESC.XLN  BrushedESC.apr
pcb/BrushedESC/Project Outputs for BrushedESC/NC Drill/: BrushedESC.DRR  BrushedESC.LDP
pcb/BrushedESC/__Previews/: BrushedESC.PcbDocPreview  BrushedESC.SchDocPreview
pcb/OldVersions/: outline.0006.ipt  outline.0008.ipt
pcb/OldVersions/V1.1/Quadrotor/: Components.SchLib  Footprints.PcbLib  IMU.SchDoc  Logic.SchDoc  Power.SchDoc  Quadrotor.OutJob  Quadrotor.PcbDoc  Quadrotor.SchDoc  (+1 more)
pcb/Quadrotor/: 3V3.SchDoc  Barometer.SchDoc  Charging.SchDoc  Components.SchLib  DW1000.Harness  DW1000.SchDoc  DistanceSensor.SchDoc  DistanceSensorBottom.SchDoc  DistanceSensorFront.SchDoc  Footprints.PcbLib  IMU.SchDoc  IR.SchDoc  LED.SchDoc  LEDs.SchDoc  MCU.SchDoc  MotorDriver.Harness  MotorDriver.SchDoc  Outline.DXF  Outline.SLDPRT  Power.SchDoc  Quadrotor.Harness  Quadrotor.OutJob  Quadrotor.PcbDoc  Quadrotor.PrjPcb  Quadrotor.PrjPcbStructure  Quadrotor.SchDoc
pcb/Quadrotor/Project Outputs for Quadrotor/: Design Rule Check - Quadrotor.drc  Design Rule Check - Quadrotor.html  Quadrotor.GKO  Quadrotor.GTO  Quadrotor.xls  Status Report.Txt
pcb/Quadrotor/__Previews/: Logic.SchDocPreview  Power.SchDocPreview  Quadrotor.PcbDocPreview  Quadrotor.SchDocPreview
quadrotor_simulator/: CMakeLists.txt  package.xml
quadrotor_simulator/include/quadrotor_simulator/: quad_model.h
quadrotor_simulator/src/: quad_model.cpp
receiver_test/: receiver_test.ino
simulator/controller/launch/: controller.launch
simulator/controller/msg/: Motors.msg
simulator/controller/src/: motors.cpp
simulator/quadrotor_simulator/: CMakeLists.txt
simulator/quadrotor_simulator/launch/: sim.launch
simulator/quadrotor_simulator/src/: quad_model.cpp
simulator/quadrotor_simulator/worlds/: quad.world
(+54 files in other folders)
